@@ -56,12 +56,12 @@ public class QuantityMapper {
             if (translation != null && !translation.isEmpty()) {
                 //If the translation is found in the MeasurementUnitsMap then add unit using this.
                 // Also add code as translation text.
-                if (foundMeasurementMatch(translation.get(0).getOriginalText())) {
-                    quantity.setUnit(MeasurementUnitsUtil.getMeasurementUnitsMap().get(translation.get(0).getOriginalText()));
-                    quantity.setCode(translation.get(0).getOriginalText());
+                if (foundMeasurementMatch(translation.getFirst().getOriginalText())) {
+                    quantity.setUnit(MeasurementUnitsUtil.getMeasurementUnitsMap().get(translation.getFirst().getOriginalText()));
+                    quantity.setCode(translation.getFirst().getOriginalText());
                 } else {
                 //If not found then just set the unit as the translation text.
-                    quantity.setUnit(translation.get(0).getOriginalText());
+                    quantity.setUnit(translation.getFirst().getOriginalText());
                 }
             } else {
                 //Set the unit to its corresponding unit in the map if found.
